--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "cors": "2.8.1",
-    "express": "4.13.3"
+    "cors": "2.8.5",
+    "express": "4.17.1"
   },
   "engines": {
-    "node": "5.6.0"
+    "node": "14.16.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/coryhouse/js-dev-env-demo-api"
+    "url": "https://github.com/JerrellManulife/js-dev-env-demo-api.git"
   },
   "author": "Cory House",
   "license": "MIT"
